This was part of the vagrant change I forgot to commit.